--- a/.gitignore
+++ b/.gitignore
@@ -182,7 +182,7 @@ data/*
 !data/.gitkeep
 
 # Allow merged and best files
-!data/replay_buffer.pkl
+!data/checkpoint_dir/replay_buffer.pt
 !data/checkpoint_dir/checkpoint_best.pth
 
 # Allow machine-specific latest files
