Tournament y jugadores antiguos

--- a/.gitignore
+++ b/.gitignore
@@ -191,3 +191,23 @@ data/*
 !data/replay_buffer_lg.pkl
 !data/checkpoint_latest_mac.pth
 !data/checkpoint_latest_lg.pth
+data/checkpoint_dir/model_epoch_001_mac.pt
+data/checkpoint_dir/model_epoch_001.pth
+data/checkpoint_dir/model_epoch_002_mac.pt
+data/checkpoint_dir/model_epoch_002.pth
+data/checkpoint_dir/model_epoch_003_mac.pt
+data/checkpoint_dir/model_epoch_003.pth
+data/checkpoint_dir/model_epoch_004_mac.pt
+data/checkpoint_dir/model_epoch_004.pth
+data/checkpoint_dir/model_epoch_005_mac.pt
+data/checkpoint_dir/model_epoch_005.pth
+data/checkpoint_dir/model_epoch_006_mac.pt
+data/checkpoint_dir/model_epoch_006.pth
+data/checkpoint_dir/model_epoch_007_mac.pt
+data/checkpoint_dir/model_epoch_007.pth
+data/checkpoint_dir/model_epoch_008_mac.pt
+data/checkpoint_dir/model_epoch_008.pth
+data/checkpoint_dir/model_epoch_009_mac.pt
+data/checkpoint_dir/model_epoch_009.pth
+data/checkpoint_dir/model_epoch_010_mac.pt
+data/checkpoint_dir/model_epoch_010.pth
